--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -16,7 +16,7 @@ a {
   transition: all 0.2s ease-out;
   .product-image {
     width: 100%;
-    max-height: 70%;
+    max-height: 60%;
     img {
       width: 100%;
       height: 100%;
@@ -38,6 +38,7 @@ a {
       font-weight: 500;
       padding: 0;
       color: var(--black);
+      overflow-y: hidden;
     }
     .product-price {
       font-size: 1.2rem;
@@ -81,4 +82,5 @@ a {
 .product--container:hover {
   box-shadow: 0 0px 20px rgba(0, 0, 0, 0.36);
   transform: scale(1.01);
+  z-index: 1;
 }
